# rust-graphql-sam-pipeline

./: .gitignore  Makefile  README.md  buildspec.yaml  pipeline.yaml  samconfig.toml  template.yaml
api/: Cargo.toml
api/src/: errors.rs  graphql.rs  main.rs
api/src/graphql/: mutation.rs  query.rs
api/src/graphql/mutation/: debug.rs
api/src/graphql/query/: debug.rs
app/: Cargo.toml
app/src/: errors.rs  lib.rs
app/src/aws/: ssm.rs
